# advent-of-code-2024

./: .gitignore  CMakeLists.txt  main.cpp
puzzles/: CMakeLists.txt
puzzles/base/: CMakeLists.txt  Grid.cpp  Grid.h  Solution.cpp  Solution.h
puzzles/day1/: CMakeLists.txt  Day1.cpp  Day1.h
puzzles/day10/: Day10.cpp  Day10.h
puzzles/day11/: Day11.cpp  Day11.h
puzzles/day12/: Day12.cpp  Day12.h
puzzles/day13/: Day13.cpp  Day13.h
puzzles/day14/: Day14.cpp  Day14.h
puzzles/day15/: Day15.cpp  Day15.h
puzzles/day16/: Day16.cpp  Day16.h
puzzles/day17/: Day17.cpp  Day17.h
puzzles/day18/: Day18.cpp  Day18.h
puzzles/day19/: Day19.cpp  Day19.h
puzzles/day2/: CMakeLists.txt  Day2.cpp  Day2.h
puzzles/day3/: Day3.cpp  Day3.h
puzzles/day4/: Day4.cpp  Day4.h
puzzles/day5/: Day5.cpp  Day5.h
puzzles/day6/: Day6.cpp  Day6.h
puzzles/day7/: Day7.cpp  Day7.h
puzzles/day8/: Day8.cpp  Day8.h
puzzles/day9/: Day9.cpp  Day9.h
